--- a/etc/app.ini.example
+++ b/etc/app.ini.example
@@ -9,7 +9,7 @@ Level = "debug"
 [kelvins-mysql]
 Host = "127.0.0.1:3306"
 UserName = "root"
-Password = "07030501310"
+Password = "xxx"
 DBName = "micro_mall_logistics"
 Charset = "utf8mb4"
 PoolNum =  10
@@ -20,14 +20,14 @@ ParseTime = true
 
 [kelvins-redis]
 Host = "127.0.0.1:6379"
-Password = "07030501310"
+Password = "xx"
 DB = 6
 PoolNum = 10
 
 [kelvins-queue-amqp]
 Broker = "amqp://micro-mall:szJ9aePR@localhost:5672/micro-mall"
 DefaultQueue = "trade_logistics_notice"
-ResultBackend = "redis://07030501310@127.0.0.1:6379/6"
+ResultBackend = "redis://xxx@127.0.0.1:6379/6"
 ResultsExpireIn = 36000
 Exchange = "trade_logistics_notice"
 ExchangeType = "direct"
@@ -38,17 +38,7 @@ TaskRetryTimeout = 36000
 
 
 [email-config]
-User = "1225807604@qq.com"
-Password = "glxggszbnrnigcii"
+User = "xxx@qq.com"
+Password = "xxx"
 Host = "smtp.qq.com"
 Port = "465"
-
-
-;[kelvins-mongodb]
-;Uri = "mongodb://localhost:27017"
-;Username = "admin"
-;Password = "07030501310"
-;Database = "micro-mall"
-;AuthSource = "admin"
-;MaxPoolSize = 9
-;MinPoolSize = 3
