/Users/yq/web/go/gopath/src/gitee.com/cristiane

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ micro-mall-logistics.pid
 micro-mall-logistics-darwin-amd64
 micro-mall-logistics-linux-amd64
 micro-mall-logistics-windows-amd64.exe
+nohup.out
